--- a/units-converter/src/Assets/Styles/Style.module.sass
+++ b/units-converter/src/Assets/Styles/Style.module.sass
@@ -9,7 +9,7 @@ $color3: #507DBC;
     font-family: 'League Spartan', sans-serif;
 
 body
-    background: $bg
+    background: $color1
     
 .converter
     width: 100%
@@ -23,7 +23,8 @@ body
     font-size: 6rem
     font-weight: 600
     background-color: $color3
-    padding: 0.3em
+    padding-top: 0.3em
+    padding-bottom: 0.3em
     border-bottom: 5px solid darken($color3, 10)
 
 .converterCategory
@@ -74,6 +75,7 @@ body
 .Content
     margin: 1em
     input
+        margin-bottom: 5px
         border: none
         background-color: transparent
         transition-duration: 0.1s
